// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldError rendering renders expected elements 1`] = `
<div
  className="FieldError"
  data-bcn-id="input-error"
  style={
    Object {
      "textAlign": "right",
    }
  }
>
  Test
</div>
`;

exports[`FieldError rendering renders expected elements when componentId is set 1`] = `
<div
  className="FieldError"
  data-bcn-id="test"
  style={
    Object {
      "textAlign": "right",
    }
  }
>
  Test
</div>
`;
